templates/apps/personservice/person-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: person-service
  labels:
    app: person-service
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: person-service
  template:
    metadata:
      labels:
        app: person-service
    spec:
      containers:
        - name: person-service
          image: mikew01/personservice-spring-app:v1.0.0
