templates/apps/personservice/person-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: person-service
  labels:
    app: person-service
    type: loadbalancer
spec:
  selector:
    app: person-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type:   LoadBalancer
